se agrefo una nueva pagina y estilos css, html y de bootrap

--- a/hoteles/index.html
+++ b/hoteles/index.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS  esta linea de codigo fue modificada y apunta a una carpeta local instalada con npm "boostrap" -->
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
-    <title>Hoteles</title>
-  </head>
-  <body>
-    <div class="container mt-2">
-      <div class="jumbotron">
-        <h1 class="display-4 mt-2"> <b>Hoteles xalapa</b> </h1>
-        <div class="container mt-5">
-        <div class="row-sm" >
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <!-- Bootstrap CSS  esta linea de codigo fue modificada y apunta a una carpeta local instalada con npm "boostrap" -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="html/hoteles.html"
+
+  <title>Hoteles</title>
+</head>
+
+<body>
+  <div class="container mt-2">
+    <div class="jumbotron">
+      <h1 class="display-4 mt-2"> <b>Hoteles xalapa</b> </h1>
+      <div class="container mt-5">
+        <div class="row-sm">
           <h2><b>Quienes somos?</b></h2>
           <p>Somos la cadena de hoteles la mejr vista de todo xalapa</p>
-          
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
+          </p>
         </div>
-        <div class="row-sm mt-2 " >
+        <div class="row-sm mt-2 ">
           <h2><b>Nuestras Habitaciones</b></h2>
           <p>
             Contamos que diferentes tipos de habitaciones y planes dependiendo
             el tiempo y necesidad de cada cliente
           </p>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
+          </p>
         </div>
-          <div class="row-sm mt2" >
+        <div class="row-sm mt2">
           <h2><b>Nuestra vision</b></h2>
           <p>ofrecer el mejor servicio y estadia a cada cliente</p>
         </div>
-      </div>
-      
-        <hr class="my-4" />
-        <p>
-         Conoce mas de nostros 
-        </p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button"
-            >click aqui</a
-          >
+          <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
         </p>
       </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS estas lineas fueron modificada en vez de apuntar a la pagina apunta a un archivo locar instalado de la misma forma que el aterior -->
-    <!-- Optional JavaScript -->
-    <!-- node_modules/"libreria"/dist/"libreria".min."XX" usa la version min por que es completa y ligera da una respuesta al servidor mas rapida -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper-utils.min.js"></script>
-    <script src="node_modules/bootstrap/dist/css/bootstrap-grid.min.css"></script>
-  </body>
+      <hr class="my-4" />
+      <p>
+        Conoce mas de nostros
+      </p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="html/hoteles.html" role="button">Guia de Hoteles</a>
+      </p>
+    </div>
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS estas lineas fueron modificada en vez de apuntar a la pagina apunta a un archivo locar instalado de la misma forma que el aterior -->
+  <!-- Optional JavaScript -->
+  <!-- node_modules/"libreria"/dist/"libreria".min."XX" usa la version min por que es completa y ligera da una respuesta al servidor mas rapida -->
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/popper.js/dist/popper-utils.min.js"></script>
+  <script src="node_modules/bootstrap/dist/css/bootstrap-grid.min.css"></script>
+</body>
+
 </html>
