--- a/hoteles/index.html
+++ b/hoteles/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="html/hoteles.html">
-
+  <link rel="page" href="html/precios.html">
   <title>Hoteles</title>
 </head>
 
@@ -30,7 +30,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="html/precios.html">Precios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="html/contacto.html">Nosotros</a>
