agregamos la tabla de targetas de creditos midificamos las targetas de hoteles y agregamos imagenes

--- a/hoteles/html/hoteles.html
+++ b/hoteles/html/hoteles.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Hoteles Xalapa</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -61,41 +61,67 @@
   <!-- Agrgamos la clase flex -->
   <!-- prte central de pagina -->
   <div class="d-flex flex-wrap">
-    <div class="col-sm-4" id="hotel1">
-      <h2><b>Casa de Juan Hostal </b></h2>
-      <p>La Casa de Juan Hostal se encuentra en Xalapa, a 2,6 km del paseo de los Lagos, y ofrece salón compartido,
+    <div class="col-sm-4 card card-hotel d-flex flex-column justify-content-between" id="car1hotel">
+      <div class="card-body"></div>
+      <h2 class="card-title"><b>Casa de Juan Hostal </b></h2>
+      <div><img  class="card-img-top" src="../imagenes/hoteles/casa-juan-hostal/external-content.duckduckgo.com.jpg" alt=""></div>
+      <p class="card-text">La Casa de Juan Hostal se encuentra en Xalapa, a 2,6 km del paseo de los Lagos, y ofrece
+        salón compartido,
         jardín y vistas a la ciudad. Este hotel de 3 estrellas ofrece WiFi gratuita y consigna de equipaje. El hotel
-        dispone de habitaciones familiares.</p>
+        dispone de habitaciones familiares.
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button"> <svg width="1em" height="1em" viewBox="0 0 16 16"
+            class="bi bi-plus-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4a.5.5 0 0 0-1 0v3.5H4a.5.5 0 0 0 0 1h3.5V12a.5.5 0 0 0 1 0V8.5H12a.5.5 0 0 0 0-1H8.5V4z" />
+          </svg> Reservar</a>
       </p>
     </div>
-    <div class="col-sm-4" id="hotel2">
-      <h2><b>Capital O SC</b></h2>
-      <p>El Capital O SC se encuentra en Xalapa, a 4 km del paseo de los Lagos y a 7 km del jardín botánico Clavijero, y
-        ofrece alojamiento con terraza y aparcamiento privado gratuito. Este hotel de 2 estrellas cuenta con recepción
-        24 horas y servicio de conserjería. Las habitaciones tienen aire acondicionado, vistas a la ciudad, armario y
-        conexión WiFi gratuita.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
-      </p>
+    <div class="col-sm-4 card card-hotel d-flex flex-column justify-content-between" id="car2hotel">
+      <div class="card-body">
+        <h2 class="card-title"><b>Capital O SC</b></h2>
+        <div><img  class="card-img-top" src="../imagenes/hoteles/capitalOS/capital.jpg" alt=""></div>
+        <p>El Capital O SC se encuentra en Xalapa, a 4 km del paseo de los Lagos y a 7 km del jardín botánico Clavijero,
+          y
+          ofrece alojamiento con terraza y aparcamiento privado gratuito. Este hotel de 2 estrellas cuenta con recepción
+          24 horas y servicio de conserjería. Las habitaciones tienen aire acondicionado, vistas a la ciudad, armario y
+          conexión WiFi gratuita.</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button"><svg width="1em" height="1em" viewBox="0 0 16 16"
+              class="bi bi-plus-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4a.5.5 0 0 0-1 0v3.5H4a.5.5 0 0 0 0 1h3.5V12a.5.5 0 0 0 1 0V8.5H12a.5.5 0 0 0 0-1H8.5V4z" />
+            </svg> Reservar</a>
+        </p>
+      </div>
     </div>
-    <div class="col-sm-4 " id="hotel3">
-      <h2><b>Holiday Inn Express Xalapa </b></h2>
-      <p>El Holiday Inn Express Xalapa está situado a 1,3 km de la montaña Galaxia y a 4,4 km del cerro del parque
-        ecológico Macuiltépetl. Ofrece centro de fitness, un desayuno exprés gratuito, conexión WiFi gratuita en todas
-        las instalaciones y servicio de traslado gratuito.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
-      </p>
+    <div class="col-sm-4 card card-hotel d-flex flex-column justify-content-between" id="car3hotel">
+      <div class="card-body">
+        <h2 class="card-title"><b>Holiday Inn Express Xalapa </b></h2>
+        <div><img  class="card-img-top" src="../imagenes/hoteles/holidayinnEsspressXalapa/holidayInnEsspresXalapa.jpg" alt=""></div>
+        <p>El Holiday Inn Express Xalapa está situado a 1,3 km de la montaña Galaxia y a 4,4 km del cerro del parque
+          ecológico Macuiltépetl. Ofrece centro de fitness, un desayuno exprés gratuito, conexión WiFi gratuita en todas
+          las instalaciones y servicio de traslado gratuito.</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button"><svg width="1em" height="1em" viewBox="0 0 16 16"
+              class="bi bi-plus-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4a.5.5 0 0 0-1 0v3.5H4a.5.5 0 0 0 0 1h3.5V12a.5.5 0 0 0 1 0V8.5H12a.5.5 0 0 0 0-1H8.5V4z" />
+            </svg> Reservar</a>
+        </p>
+      </div>
     </div>
-    <div class="col-sm-4 " id="hotel4">
-      <h2><b> Meson del Alferez Xalapa </b></h2>
+    <div class="col-sm-4 card card-hotel d-flex flex-column justify-content-between" id="car4hotel">
+      <h2 class="card-title"><b> Meson del Alferez Xalapa </b></h2>
       <p>Esta mansión colonial restaurada, situada a 250 metros de la catedral de Xalapa, cuenta con amplias
         habitaciones con TV por cable y agua embotellada gratuita. El restaurante La Candela sirve almuerzos a la carta
         a diario y tiene WiFi gratuita.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">click aqui</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button"><svg width="1em" height="1em" viewBox="0 0 16 16"
+            class="bi bi-plus-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4a.5.5 0 0 0-1 0v3.5H4a.5.5 0 0 0 0 1h3.5V12a.5.5 0 0 0 1 0V8.5H12a.5.5 0 0 0 0-1H8.5V4z" />
+          </svg> Reservar</a>
       </p>
     </div>
   </div>
