--- a/hoteles/html/precios.html
+++ b/hoteles/html/precios.html
@@ -210,6 +210,20 @@
   </body>
   </div>
   <!--fin price table---->
+  <!--Inicio tabla de targetas aceptadas-->
+  <div class="d-flex justify-content-center">
+    <div class="card" style="width: 18rem;">
+      <div class="card-header" style="background-color: pink; ">
+        targetas aceptadas
+      </div>
+      <ul class=" list-group" list-group-flush>
+        <li class="list-group-item">Targeta básica</li>
+        <li class="list-group-item">Targeta VIP</li>
+        <li class="list-group-item">black sabbath </li>
+      </ul>
+    </div>
+  </div>
+  <!--Fin de la tabla de targetas-->
   <!-- parte central de pagina -->
   <div class="card text-black bg-white mb-3 d-inline-block" style="">
     <div class="card-header card-title">
