--- a/hoteles/index.html
+++ b/hoteles/index.html
@@ -68,6 +68,20 @@
           <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
         </nav>
+        <!--Corusel -->
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="imagenes/hoteles/capitalOS/capital.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="imagenes/hoteles/casa-juan-hostal/external-content.duckduckgo.com.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="imagenes/hoteles/holidayinnEsspressXalapa/holidayInnEsspresXalapa.jpg" alt="Third slide">
+            </div>  
+          </div>
+        </div>
         <div class="row-sm">
           <h2><b>Quienes somos?</b></h2>
           <p>Somos la cadena de hoteles la mejr vista de todo xalapa</p>
@@ -103,7 +117,7 @@
       </p>
     </div>
   </div>
-
+<!-- -->
   <!-- Inicio de pie de pagina -->
   <div class="container " id="container3">
     <footer class="page-footer card-group">
@@ -166,7 +180,6 @@
       </div>
   </div>
   <div class="col-sm-4 d-flex flex-colum align-items-right alig-items-end">
-  </div>
   </div>
   </footer>
   <!-- Optional JavaScript -->
